--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ html {
 
 body {
     font-family:sans-serif;
+   scroll-behavior: smooth;
 }
 
 
@@ -158,6 +159,7 @@ ul {
 
 /* 3-sections styles */
 /* 3.0 header */
+
 #mohamed.collapse .nav-item{
 border-bottom: 1px solid #e7e7e7; 
 
@@ -210,7 +212,7 @@ border-bottom: 1px solid #e7e7e7;
 }
 
 .home-content {
-    width: 800px;
+
     position: absolute;
     top: 50%;
     left: 50%;
